# univers

./: .gitignore  .mailmap  .travis.yml  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  NOTICE  README  README.md  README.rst  VERSION-RANGE-SPEC.rst  azure-pipelines.yml  configure  configure2  conftest.py  debian_version_CHANGELOG.rst  debian_version_README.rst  debian_version_requirements-tests.txt  default.nix  dev-requirements.txt  devreqs.txt  flake.nix  foo.json  maven_version_CODEOWNERS  maven_version_MANIFEST.in  overlay.nix  pyproject.toml  requirements-dev.txt  requirements.txt  rpm_vercmp_MANIFEST.in  setup.cfg  setup.py  shell.nix  test-requirements.txt  testsuite.py
.github/workflows/: docs-ci.yml  pypi-release.yml
dlt/: coverage.py
docs/source/contribute/: contrib_doc.rst
etc/scripts/: README.rst  bootstrap.py  publish_files.py  utils_dejacode.py  utils_thirdparty.py
libmaven/: __init__.py  artifact.py  constants.py  errors.py  versioning.py
puppeter/domain/model/: gemrequirement.py
pymaven/: versioning.py
recipes/: libmaven.recipe  pymaven.recipe
rpm_vercmp/tests/: vercmp_test.py
src/: debut.py  utils.py  version_range.py  version_specifier.py  versions.py
src/debian_inspector/: version.py  version.py.ABOUT
src/debian_version/: debian_version.py
src/rpm_vercmp/: vercmp.py
src/univers/: arch.py  arch.py.ABOUT  arch.py.NOTICE  config.py  datetime.py  debian.py  gem.py  gem.py.ABOUT  gentoo.py  gentoo.py.ABOUT  intdot.py  libversion.py  maven.py  maven.py.ABOUT  normalized_range.py  nuget.py  nuget.py.ABOUT  rpm.py  rpm.py.README  rpm.py.antlir.ABOUT  rpm.py.antlir.LICENSE  rpm.py.antlir.NOTICE  rpm_metadata.py  semver.py  span.py  swift_version_range.py  univers_semver.py  utils.py  version_constraint.py  version_range.py  version_specifier.py  versions.py
src/univers/conan/: errors.py  errors.py.ABOUT  version.py  version.py.ABOUT  version_range.py  version_range.py.ABOUT
src/univers/debian_version/: version.py
src/universal_versions/: version_range.py  version_specifier.py  versions.py
src/universal_versions/debian_version/: version.py
src/universal_versions/maven_version/: version.py
tests/: __init__.py  commoncode.ABOUT  nuget_versioning_tests.ABOUT  rpm_vercmp_test.py  test_alpine.py  test_bundler_version_ranges_spec.py  test_bundler_version_ranges_spec.py.ABOUT  test_cargo_version.ABOUT  test_cargo_version.py  test_cargo_version_range.py  test_cargo_version_range.py.ABOUT  test_codestyle.py  test_composer_version_range.py  test_conan_version_bump.py  test_conan_version_bump.py.ABOUT  test_conan_version_bump.py.NOTICE  test_conan_version_comparison.py  test_conan_version_comparison.py.ABOUT  test_conan_version_range.py  test_conan_version_range.py.ABOUT  test_debian_version.py  test_debian_version.py.ABOUT  test_debian_version_python_deb_pkg_tools.py  test_debian_version_python_deb_pkg_tools.py.ABOUT  test_gem.py  test_gem.py.ABOUT  test_gem_requirement.py  test_gem_requirement.py.ABOUT  test_gentoo.py  test_gentoo.py.ABOUT  test_gentoo.py.NOTICE  test_gentoo_pkgcore.py  test_gentoo_pkgcore.py.ABOUT  test_golang_version_range.py  test_maven_version.py  test_maven_version.py.ABOUT  test_maven_version_range.py  test_maven_version_versioning.py  test_normalized_range.py  test_nuget.py  (+35 more)
tests/commoncode/: __init__.py  compat.py  filetype.py  fileutils.py  testcase.py
tests/data/: alpine_test.txt  alpine_test.txt.ABOUT  alpine_test.txt.NOTICE  composer_gitlab.json  conan_advisory.json  gem_gitlab.json  go_gitlab.json  inverse-data.json  npm_advisory.json  npm_gitlab.json  nuget_versioning_tests.ABOUT  pypi_gitlab.json  test-suite-data.json
tests/data/nuget_versioning_tests/: test_external_comparer.py  test_semantic_version.py  test_version_range.py  test_version_range_operation.py  (+1 more)
tests/nuget/: test_external_comparer.py  test_floating_range.py  test_nuget_floating_range.py  test_nuget_semver_201_spec.py  test_nuget_version.py  test_nuget_version_range_float_parsing.py  test_semantic_version.py  test_semver_201_spec.py  test_version_comparer.py  test_version_parsing.py  test_version_range.py  test_version_range_float_parsing.py  test_version_range_operation.py
tests/test_data/: rpmvercmp.at  rpmvercmp.at.ABOUT  rpmvercmp.at.NOTICE
(+39 files in other folders)
