[metadata]
license_files =
    apache-2.0.LICENSE
    bsd-new.LICENSE
    mit.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    README.rst
name = univers
author =  Shivam Sandbhor, nexB. Inc. and others
author_email = info@aboutcode.org
license = Apache-2.0 AND BSD-3-Clause AND MIT

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = A mostly universal library to parse and compare software package versions and version ranges. A companion to Package URLs.
long_description = file:README.rst
url = https://github.com/nexB/univers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords = 
    semver
    utilities
    version
    release
    version range
    package URL
    purl
    arch
    pacman
    pypi
    rpm
    gentoo
    ebuild
    maven
    debian
    rubygems

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false

install_requires =
    attrs
    packaging
    semantic-version

setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.extras_require]
testing =
    # upstream
    pytest >= 6
    pytest-xdist >= 2
docs=
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    doc8>=0.8.1
