[metadata]
name = univers
license = Apache-2.0 AND BSD-3-Clause AND MIT

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = A mostly universal library to parse and compare software package versions and version ranges. A companion to Package URLs.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/aboutcode-org/univers

author =  Shivam Sandbhor, nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords =
    semver
    utilities
    version
    release
    version range
    package URL
    purl
    arch
    pacman
    pypi
    rpm
    gentoo
    ebuild
    maven
    debian
    rubygems

license_files =
    apache-2.0.LICENSE
    bsd-new.LICENSE
    mit.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    README.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.8

install_requires =
    attrs
    packaging
    semantic-version
    semver


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    pycodestyle >= 2.8.0
    twine
    black
    commoncode
    isort>=5.10.1

docs =
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton

